[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="FontFile" id=1]
[ext_resource path="res://src/core/CardViewer/CardLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/core/CardViewer/DeckBuilder/DBDeckCardObject.gd" type="Script" id=4]
[ext_resource path="res://fonts/comfortaa/Comfortaa-Bold.ttf" type="FontFile" id=5]

[sub_resource type="FontFile" id=2]
size = 14
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 15
use_filter = true
font_data = ExtResource( 5 )

[node name="DBDeckCardObject" type="HBoxContainer"]
offset_right = 623.0
offset_bottom = 18.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="."]
offset_right = 24.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 0 )
theme_override_fonts/font = SubResource( 2 )
text = "+"

[node name="Minus" type="Button" parent="."]
offset_left = 28.0
offset_right = 52.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 0 )
theme_override_fonts/font = SubResource( 2 )
text = "-"

[node name="CardCount" type="Label" parent="."]
offset_left = 56.0
offset_top = 3.0
offset_right = 70.0
offset_bottom = 21.0
theme_override_fonts/font = SubResource( 3 )
text = "1x"
valign = 2

[node name="CardLabel" parent="." instance=ExtResource( 2 )]
offset_left = 74.0
offset_right = 623.0
offset_bottom = 24.0
size_flags_vertical = 5
fit_content_height = false

[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
